admin role management

--- a/src/app/component/app-dashboard/app-dashboard.component.html
+++ b/src/app/component/app-dashboard/app-dashboard.component.html
@@ -21,7 +21,7 @@
                             </a>
                         </div>
                         <div class="card-legend">Collaborateurs</div>
-                        <div class="description"><div style="padding-top: 5px">Collaborateurs</div></div>
+                        <div class="description"><div style="padding-top: 5px">Gérer les <br> collaborateurs et <br> mettre fin à une <br> mission</div></div>
                     </div>
                 </div>
                 <div routerLink="/prestations" class="ui-g-4 case">
@@ -33,7 +33,7 @@
                             </a>
                         </div>
                         <div class="card-legend">Congés</div>
-                        <div class="description"><div style="padding-top: 5px">Congés</div></div>
+                        <div class="description"><div style="padding-top: 5px">Consulter les congés des collaborateurs</div></div>
                     </div>
                 </div>
                 <div routerLink="/collaborateurs" class="ui-g-4 case">
@@ -45,7 +45,7 @@
                             </a>
                         </div>
                         <div class="card-legend">Annuaire</div>
-                        <div class="description"><div style="padding-top: 5px">Annuaire</div></div>
+                        <div class="description"><div style="padding-top: 5px">Contacter un collaborateur</div></div>
                     </div>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                             </a>
                         </div>
                         <div class="card-legend">Prestations</div>
-                        <div class="description"><div style="padding-top: 5px">Prestations</div></div>
+                        <div class="description"><div style="padding-top: 5px">Gérer les prestations</div></div>
                     </div>
                 </div>
                 <div routerLink="/collaborateurs" class="ui-g-4 case">
@@ -98,7 +98,7 @@
                             </a>
                         </div>
                         <div class="card-legend">Tableau de bord</div>
-                        <div class="description"><div style="padding-top: 5px">Tableau de bord</div></div>
+                        <div class="description"><div style="padding-top: 5px">Suivre le taux de soutraitance</div></div>
                     </div>
                 </div>
                 <div routerLink="collaborateurs" class="ui-g-4 case">
@@ -110,7 +110,7 @@
                             </a>
                         </div>
                         <div class="card-legend">Référentiel</div>
-                        <div class="description"><div style="padding-top: 5px">Référentiel</div></div>
+                        <div class="description"><div style="padding-top: 5px">Gérer les tables du référentiel</div></div>
                     </div>
                 </div>
                 <div routerLink="collaborateurs" class="ui-g-4 case">
@@ -121,7 +121,7 @@
                             </a>
                         </div>
                         <div class="card-legend">Administrateur</div>
-                        <div class="description"><div style="padding-top: 5px">Administrateur</div></div>
+                        <div class="description"><div style="padding-top: 5px">Gérer les droits des utilisateurs et charger les tables du référentiel</div></div>
                     </div>
                 </div>
             </div>
