juste need an npm install to fix xlsx issue

--- a/src/app/administrator/administrator.component.html
+++ b/src/app/administrator/administrator.component.html
@@ -17,7 +17,7 @@
         </p-fileUpload>
 
         <button pButton type="button" label="Importer toutes les tables" icon="pi pi-upload"
-                class="ui-button-success" (click)="saveRefTable()"></button>
+                class="ui-button-success" (click)="saveRefTable($event)"></button>
     </div>
 </p-toolbar>
 <br>
