Admin content management optimisations

--- a/src/app/component/app-dashboard/app-dashboard.component.html
+++ b/src/app/component/app-dashboard/app-dashboard.component.html
@@ -135,12 +135,13 @@
                     <div style="position:relative">
                         <div class="shadow-box ui-shadow-1">
                             <a *ngIf="isAdmin$ | async">
+                                <a>
                                 <img class="image" src="./assets/layout/images/icones/administration.png" title=""
                                      data-themekey="#">
-
+                                </a>
                                 <div class="card-legend">Administrateur</div>
                                 <div class="description">
-                                    <div style="padding-top: 5px">Gérer les droits des utilisateurs et charger les
+                                    <div style="padding-top: 5px;color: #FFF">Gérer les droits des utilisateurs et charger les
                                         tables du référentiel
                                     </div>
                                 </div>
