--- a/src/app/administrator/administrator.component.html
+++ b/src/app/administrator/administrator.component.html
@@ -1,53 +1,24 @@
-<p-toolbar>
 
-
-
-    <div class="ui-toolbar-group-left">
-
-        <a style="padding-left: 10px" [routerLink]="['/register']" class="btn btn-link">Créer un utilisateur</a>
-    </div>
-</p-toolbar>
-<br>
-
-<p-toolbar>
-    <!--    <div class="ui-toolbar-group-right">
-
-            <input type="file" style="display: inline-block;" (change)="incomingfile($event)" placeholder="Upload file"
-                   accept=".xlsx">
-            <button type="button" class="btn btn-info" (click)="Upload()">Upload</button>
-
-        </div>-->
-
-    <div class="ui-toolbar-group-left">
-
-
-        <p-fileUpload #fubauto #fileImportInput mode="basic" accept=".xlsx" customUpload="true"
-                      (uploadHandler)="Upload($event)" auto="true"
-                      chooseLabel="Importer les données de réferenciel">
-
-        </p-fileUpload>
-
-        <button pButton type="button" label="Importer toutes les tables" icon="pi pi-upload"
-                class="ui-button-success" (click)="saveRefTable($event)"></button>
-    </div>
-</p-toolbar>
-<br>
-
-
-<p-accordion [multiple]="true" *ngFor="let item of all_sheet_name; let i = index"  >
-    <p-accordionTab header="Godfather I">
-        <p-header class="" style="">
-
-            <div class="ui-toolbar-group-left" style="position:absolute;top:5%;left: 40px"><a>{{all_sheet_name[i]}}</a></div>
-            <div class="ui-toolbar-group-right" style="position:absolute;top:5%;right:10px">
-                <button pButton type="button" label="Importer la table" icon="pi pi-upload"
-                        class="ui-button-success" (click)="saveRefTable(i)"></button>
+<p-tabView>
+    <p-tabPanel header="Utilisateurs">
+        <p-toolbar>
+            <div class="ui-toolbar-group-left">
+                <button pButton type="button" label="Créer un utilisateur" icon="pi pi-fw pi-user-plus"
+                        class="ui-button-success"  [routerLink]="['/register']" ></button>
             </div>
-        </p-header>
-
+        </p-toolbar>
+        <br>
         <p-table [style]="{'overflow':'auto!important'}" [resizableColumns]="true"
-                 columnResizeMode="expand" [responsive]="true"  [columns]="columns[i]" [value]="alltable[i]"
+                 columnResizeMode="expand" [responsive]="true" #tt [columns]="allUsersCols" [value]="allUsers"
                  [paginator]="true" [rows]="10">
+
+        <!--    <ng-template pTemplate="caption">
+                <div style="text-align:left">
+                    <p-multiSelect [options]="allUsersCols" [(ngModel)]="allUsers" optionLabel="header"
+                                   selectedItemsLabel="{0} columns selected" [style]="{minWidth: '200px'}"
+                                   defaultLabel="Choose Columns"></p-multiSelect>
+                </div>
+            </ng-template>-->
 
             <ng-template pTemplate="header" let-columns>
                 <tr>
@@ -61,16 +32,93 @@
                 <tr [pSelectableRow]="rowData">
 
                     <td *ngFor="let col of columns">
-                        {{rowData[col]}}
+                        <a *ngIf="col=='roles'" ><a *ngFor="let obj of rowData[col]">{{obj.name}} </a></a>
+                        <a *ngIf="col!=='roles'">{{rowData[col]}}</a>
+                    </td>
+                    <td class="cta_collabs">
+                        <div class="ui-toolbar-group-right">
+                            <button pButton type="button" icon="pi pi-search"></button>
+                            <button pButton type="button" icon="pi pi-calendar" class="ui-button-success"></button>
+                            <button pButton type="button" icon="pi pi-times" class="ui-button-danger"></button>
+                        </div>
                     </td>
                 </tr>
 
             </ng-template>
         </p-table>
-    </p-accordionTab>
+    </p-tabPanel>
+    <p-tabPanel header="Réferenciels">
+        <p-toolbar>
+            <!--    <div class="ui-toolbar-group-right">
+
+                    <input type="file" style="display: inline-block;" (change)="incomingfile($event)" placeholder="Upload file"
+                           accept=".xlsx">
+                    <button type="button" class="btn btn-info" (click)="Upload()">Upload</button>
+
+                </div>-->
+
+            <div class="ui-toolbar-group-left">
 
 
-</p-accordion>
+                <p-fileUpload #fubauto #fileImportInput mode="basic" accept=".xlsx" customUpload="true"
+                              (uploadHandler)="Upload($event)" auto="true"
+                              chooseLabel="Importer les données de réferenciel">
+
+                </p-fileUpload>
+
+                <button pButton type="button" label="Importer toutes les tables" icon="pi pi-upload"
+                        class="ui-button-success" (click)="saveRefTable($event)"></button>
+            </div>
+        </p-toolbar>
+        <br>
+
+
+        <p-accordion [multiple]="true" *ngFor="let item of all_sheet_name; let i = index"  >
+            <p-accordionTab header="Godfather I">
+                <p-header class="" style="">
+
+                    <div class="ui-toolbar-group-left" style="position:absolute;top:5%;left: 40px"><a>{{all_sheet_name[i]}}</a></div>
+                    <div class="ui-toolbar-group-right" style="position:absolute;top:5%;right:10px">
+                        <button pButton type="button" label="Importer la table" icon="pi pi-upload"
+                                class="ui-button-success" (click)="saveRefTable(i)"></button>
+                    </div>
+                </p-header>
+
+                <p-table [style]="{'overflow':'auto!important'}" [resizableColumns]="true"
+                         columnResizeMode="expand" [responsive]="true"  [columns]="columns[i]" [value]="alltable[i]"
+                         [paginator]="true" [rows]="10">
+
+                    <ng-template pTemplate="header" let-columns>
+                        <tr>
+                            <th *ngFor="let col of columns">
+                                {{col}}
+                            </th>
+                        </tr>
+
+                    </ng-template>
+                    <ng-template pTemplate="body" let-rowData let-columns="columns">
+                        <tr [pSelectableRow]="rowData">
+
+                            <td *ngFor="let col of columns">
+                                {{rowData[col]}}
+                            </td>
+                        </tr>
+
+                    </ng-template>
+                </p-table>
+            </p-accordionTab>
+
+
+        </p-accordion>    </p-tabPanel>
+
+</p-tabView>
+
+
+
+
+
+
+
 
 <!--
 
