--- a/src/app/component/prestations/prestations.component.html
+++ b/src/app/component/prestations/prestations.component.html
@@ -1,46 +1,32 @@
-<!--<div *ngFor="let jugador of jugadores">
-  <div class="col-sm-4 col-md-4 col-lg-4">
-    &lt;!&ndash; <div *ngIf="jugador.estado as true"> &ndash;&gt;
-      <div class="well">
-          <h1 class="text-warning">{{jugador.nombre}}</h1>
-          <p><span class="label label-default">Disponible</span>
-          </p>
-          <ul class="list-group">
-              <li class="list-group-item"><b>Edad:</b> {{jugador.edad}}</li>
-              <li class="list-group-item"><b>Apodo:</b> {{jugador.apodo}}</li>
-              <li class="list-group-item"><b>Posicion:</b> {{jugador.posicion}}</li>
-                <li class="list-group-item"><b>Estado:</b> {{jugador.estado}}</li>
-              <li class="list-group-item">
-                  <img src="../../assets/images/{{jugador.foto}}" alt="Sin foto" />
-              </li>
-          </ul>
-          <button *ngIf="jugador.estado as true" class="btn btn-primary btn-sm">Ver</button>
-      </div>
-    &lt;!&ndash; </div> &ndash;&gt;
-  </div>
-</div>-->
 <p-toolbar>
-       <div class="ui-toolbar-group-right">
-        <button pButton type="button" label="New" icon="pi pi-plus"></button>
-        <!--<button pButton type="button" label="Upload" icon="pi pi-upload" class="ui-button-success"></button>-->
-        <!--<i class="pi pi-bars"></i>-->
-        </div>
+    <div class="ui-toolbar-group-right">
+        <button pButton type="button" label="Nouvelle prestation" icon="pi pi-plus"
+                (click)="afficherLaSaisie($event)"></button>
+
+    </div>
+
 
 
 </p-toolbar>
-<div >
-   <p></p>
-</div>
-<p-table #tt [columns]="cols" [value]="prestations" [paginator]="true" [rows]="10">
-        <ng-template pTemplate="caption">
-        <div class="ui-toolbar-group-left">PRESTATIONS</div>
+<br>
+
+<p-table #dt [columns]="selectedColumns" [value]="collaborateurs" [paginator]="true" [rows]="10">
+    <ng-template pTemplate="caption">
+        <div class="ui-toolbar-group-left">La liste des prestations</div>
         <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
-        <input type="text" pInputText size="50" placeholder="Global Filter" (input)="tt.filterGlobal($event.target.value, 'contains')" style="width:auto">
+        <input type="search" pInputText size="50" placeholder="Global Filter"
+               (input)="dt.filterGlobal($event.target.value, 'contains')" style="width:auto">
+        <div class="ui-toolbar-group-right">
+            <p-multiSelect [options]="cols" [showToggleAll]="" [(ngModel)]="selectedColumns" optionLabel="header"
+                           selectedItemsLabel="{0} columns selected" [style]="{minWidth: '200px'}"
+                           defaultLabel="Choose Columns"></p-multiSelect>
+        </div>
     </ng-template>
+
 
     <ng-template pTemplate="header" let-columns>
         <tr>
-            <th *ngFor="let col of cols">
+            <th *ngFor="let col of columns">
                 {{col.header}}
             </th>
         </tr>
@@ -52,7 +38,7 @@
             <td *ngFor="let col of columns">
                 {{rowData[col.field]}}
             </td>
-            <td>
+            <td class="cta_collabs">
                 <div class="ui-toolbar-group-right">
                     <button pButton type="button" icon="pi pi-search"></button>
                     <button pButton type="button" icon="pi pi-calendar" class="ui-button-success"></button>
@@ -63,106 +49,143 @@
 
     </ng-template>
 </p-table>
-<!--<p-dataView #dv1 [style]="{'padding': '20px'}" [value]="prestations" [paginator]="true" [rows]="10" paginatorPosition="both" filterBy="nom"-->
-            <!--[sortField]="sortField" [sortOrder]="sortOrder">-->
-    <!--<p-header>-->
 
-        <!--<div class="ui-helper-clearfix">-->
-            <!--<div class="ui-g">-->
-                <!--<div class="ui-g-12 ui-md-4">-->
-                    <!--<p-dropdown [options]="sortOptions" [(ngModel)]="sortKey" placeholder="Sort By"-->
-                                <!--(onChange)="onSortChange($event)" [autoWidth]="false" [style]="{'min-width':'15em'}"></p-dropdown>-->
-                <!--</div>-->
-                <!--<div class="ui-g-6 ui-md-4 filter-container">-->
-                    <!--<div style="position:relative">-->
-                        <!--<input type="search" pInputText placeholder="Search by brand" (keyup)="dv1.filter($event.target.value)">-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="ui-g-6 ui-md-4" style="text-align:right">-->
-                    <!--<p-dataViewLayoutOptions></p-dataViewLayoutOptions>-->
-                <!--</div>-->
-
-            <!--</div>-->
-        <!--</div>-->
-    <!--</p-header>-->
-    <!--<ng-template let-prestation pTemplate="listItem">-->
-        <!--<div class="ui-g" style="border: 1px solid #d9d9d9">-->
+<p-dialog header="Nouvelle prestation" [(visible)]="displayDialog" [responsive]="true" [modal]="true"
+          [styleClass]="'importcsv'">
 
 
+    <p-tabView>
+        <p-tabPanel header="création" leftIcon="pi pi-calendar">
+            <div class="ui-g ui-fluid">
+                <div class="ui-g-12 ui-md-4">
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon">id_pilot</span>
+                        <input type="text" pInputText placeholder="identifiant pilot">
+                    </div>
+                </div>
 
-            <!--<div class="ui-g-10 ui-md-9 car-details">-->
-                <!--<div class="ui-g-1 ui-sm-6">id_prestation:</div>-->
-                <!--<div class="ui-g-1 ui-sm-6"><b>{{prestation.id_prestation}}</b></div>-->
+                <div class="ui-g-12 ui-md-4">
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon">nom</span>
+                        <input type="text" pInputText placeholder="nom">
+                    </div>
+                </div>
 
-                <!--<div class="ui-g-1 ui-sm-6">no_contrat:</div>-->
-                <!--<div class="ui-g-1 ui-sm-6"><b>{{prestation.no_contrat}}</b></div>-->
+                <div class="ui-g-12 ui-md-4">
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon">prenom</span>
+                        <input type="text" pInputText placeholder="prenom">
+                    </div>
+                </div>
+            </div>
+            <div class="ui-g ui-fluid">
+                <div class="ui-g-12 ui-md-4">
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon">trig_open</span>
+                        <input type="text" pInputText placeholder="trigramme open">
+                    </div>
+                </div>
 
-                <!--<div class="ui-g-1 ui-sm-6">id_pilot:</div>-->
-                <!--<div class="ui-g-1 ui-sm-6"><b>{{prestation.id_pilot}}</b></div>-->
+                <div class="ui-g-12 ui-md-4">
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon">tel_p</span>
+                        <input type="text" pInputText placeholder="telephone personnel">
+                    </div>
+                </div>
 
-                <!--<div class="ui-g-1 ui-sm-6">departement:</div>-->
-                <!--<div class="ui-g-1 ui-sm-6"><b>{{prestation.departement}}</b></div>-->
+                <div class="ui-g-12 ui-md-4">
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon">mail_op</span>
+                        <input type="text" pInputText placeholder="mail open">
+                    </div>
+                </div>
+            </div>
+            <div class="ui-g ui-fluid">
+                <div class="ui-g-12 ui-md-4">
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon">mail_sg</span>
+                        <input type="text" pInputText placeholder="mail sociéte générale">
+                    </div>
+                </div>
 
-                <!--<div class="ui-g-1 ui-sm-6">pole:</div>-->
-                <!--<div class="ui-g-1 ui-sm-6"><b>{{prestation.pole}}</b></div>-->
+                <div class="ui-g-12 ui-md-4">
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon">code_cat</span>
+                        <input type="text" pInputText placeholder="categorisation">
+                    </div>
+                </div>
 
-                <!--<div class="ui-g-1 ui-sm-6">domaine:</div>-->
-                <!--<div class="ui-g-1 ui-sm-6"><b>{{prestation.domaine}}</b></div>-->
+                <div class="ui-g-12 ui-md-4">
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon">top_sta</span>
+                        <input type="text" pInputText placeholder="top statut">
+                    </div>
+                </div>
+            </div>
+            <div class="ui-g ui-fluid">
+                <div class="ui-g-12 ui-md-4">
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon">statut</span>
+                        <input type="text" pInputText placeholder="statut">
+                    </div>
+                </div>
+            </div>
+            <p-footer>
+                <div class="ui-dialog-buttonpane ui-helper-clearfix">
+                    <button pButton type="button" label="Créer les collaborateurs" icon="pi pi-upload"
+                            class="ui-button-success"
+                            (click)="saveNewCollaborateur()"></button>
+                </div>
+            </p-footer>
+        </p-tabPanel>
+        <p-tabPanel header="Importer" leftIcon="pi pi-inbox">
 
-                <!--<div class="ui-g-1 ui-sm-6">code_site:</div>-->
-                <!--<div class="ui-g-1 ui-sm-6"><b>{{prestation.code_site}}</b></div>-->
 
-                <!--<div class="ui-g-1 ui-sm-6">no_atg:</div>-->
-                <!--<div class="ui-g-1 ui-sm-6"><b>{{prestation.no_atg}}</b></div>-->
+            <p-table [style]="{'overflow':'auto!important'}" [resizableColumns]="true"
+                     columnResizeMode="expand" [responsive]="true" #tt [columns]="selectedColumns" [value]="csvRecords"
+                     [paginator]="true" [rows]="10">
 
-                <!--<div class="ui-g-1 ui-sm-6">id_resp_pole:</div>-->
-                <!--<div class="ui-g-1 ui-sm-6"><b>{{prestation.id_resp_pole}}</b></div>-->
+                <ng-template pTemplate="caption">
+                    <div style="text-align:left">
+                        <p-multiSelect [options]="cols" [(ngModel)]="selectedColumns" optionLabel="header"
+                                       selectedItemsLabel="{0} columns selected" [style]="{minWidth: '200px'}"
+                                       defaultLabel="Choose Columns"></p-multiSelect>
+                    </div>
+                </ng-template>
 
-                <!--<div class="ui-g-1 ui-sm-6">id_don_ordre:</div>-->
-                <!--<div class="ui-g-1 ui-sm-6"><b>{{prestation.id_don_ordre}}</b></div>-->
+                <ng-template pTemplate="header" let-columns>
+                    <tr>
+                        <th *ngFor="let col of columns">
+                            {{col.header}}
+                        </th>
+                    </tr>
+
+                </ng-template>
+                <ng-template pTemplate="body" let-rowData let-columns="columns">
+                    <tr [pSelectableRow]="rowData">
+
+                        <td *ngFor="let col of columns">
+                            {{rowData[col.field]}}
+                        </td>
+                    </tr>
+
+                </ng-template>
+            </p-table>
+            <p-footer>
+                <div class="ui-toolbar-group-left">
+                    <button pButton type="button" label="Créer les collaborateurs" icon="pi pi-upload"
+                            class="ui-button-success" (click)="saveNewCollaborateur()"></button>
 
 
-            <!--</div>-->
-            <!--<div class="ui-g-1 ui-md-2 search-icon">-->
-                <!--<button pButton type="button" icon="pi pi-search" (click)="selectPrestation($event, prestation)"></button>-->
-                <!--<button pButton type="button" icon="pi pi-calendar" class="ui-button-success"></button>-->
-                <!--<button pButton type="button" icon="pi pi-times" class="ui-button-danger"></button>-->
-            <!--</div>-->
-        <!--</div>-->
+                    <p-fileUpload #fubauto #fileImportInput mode="basic" accept=".csv" customUpload="true"
+                                  (uploadHandler)="onUpload($event)" auto="true"
+                                  chooseLabel="Importer les collaborateurs"></p-fileUpload>
+                </div>
+            </p-footer>
 
-    <!--</ng-template>-->
+        </p-tabPanel>
+
+    </p-tabView>
 
 
-    <!--<ng-template let-prestation pTemplate="gridItem">-->
-        <!--<div style="padding:.5em" class="ui-g-6 ui-md-2">-->
-            <!--<p-panel [header]="prestation.vin" [style]="{'text-align':'center'}">-->
-                <!--<img src="assets/showcase/images/demo/car/{{prestation.brand}}.png" width="120">-->
-                <!--<div class="car-detail">{{prestation.id_prestation}} - {{prestation.no_contrat}}</div>-->
-                <!--<hr class="ui-widget-content" style="border-top:0">-->
-                <!--<button pButton type="button" icon="pi pi-search" (click)="selectedPrestation($event, prestation)"-->
-                        <!--style="margin-top:0"></button>-->
-            <!--</p-panel>-->
-        <!--</div>-->
-
-    <!--</ng-template>-->
-<!--</p-dataView>-->
-
-<p-dialog header="Car Details" [(visible)]="displayDialog" [responsive]="true" showEffect="fade" [modal]="true"
-          width="225" (onAfterHide)="onDialogHide()">
-    <div class="ui-g" *ngIf="selectedPrestation">
-        <div class="ui-g-12" style="text-align:center">
-            <img src="assets/showcase/images/demo/car/{{selectedPrestation.id_prestation}}.png">
-        </div>
-        <div class="ui-g-4">Vin:</div>
-        <div class="ui-g-8">{{selectedPrestation.no_contrat}}</div>
-
-        <div class="ui-g-4">Brand:</div>
-        <div class="ui-g-8">{{selectedPrestation.id_pilot}}</div>
-
-        <div class="ui-g-4">Year:</div>
-        <div class="ui-g-8">{{selectedPrestation.departement}}</div>
-
-        <div class="ui-g-4">Color:</div>
-        <div class="ui-g-8">{{selectedPrestation.code_site}}</div>
-    </div>
 </p-dialog>
