--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,11 @@
                         <core-menu [reset]="resetMenu"></core-menu>
                     </div>
                 </div>
+                <div style="color: #1fb4fc;text-align: center;bottom: 10px;float:bottom">Version : {{version}}</div>
+                <div style="text-align: center;bottom: 10px;float:bottom">Date : {{date}}</div>
+
             </p-scrollPanel>
+
         </div>
     </div>
 
@@ -35,7 +39,9 @@
 
     <div class="">
         <core-footer></core-footer>
+
     </div>
+    <a style="color: #1fb4fc">{{version}}</a>
 
 
 </div>
