--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,8 @@
                 'menu-layout-slim': isSlim(),
                 'layout-menu-static-inactive': staticMenuDesktopInactive,
                 'layout-menu-static-active': staticMenuMobileActive}">
-
+    <div style="color: #1fb4fc;text-align: center;bottom: 10px;float:bottom">Version : {{version}}</div>
+    <div style="text-align: center;bottom: 10px;float:bottom">Date : {{date}}</div>
     <core-topbar></core-topbar>
 
     <div>
