fix rxjs behaviorsubject 2

--- a/src/core/components/core-footer/core-footer.component.html
+++ b/src/core/components/core-footer/core-footer.component.html
@@ -1,10 +1,14 @@
 <div class="layout-footer">
     <span class="footer-text-left">
-        <img src="assets/layout/images/logo.png" />
+        <img src="assets/layout/images/logo.png"/>
+
     </span>
-    <span class="footer-text-right">
+    <span class="footer-text-right" style="text-align: right">
         <a href="#"><i class="fa fa-facebook"></i></a>
         <a href="#"><i class="fa fa-twitter"></i></a>
         <a href="#"><i class="fa fa-github"></i></a>
+        <div style="color: #1fb4fc;text-align: left;bottom: 10px;float:bottom">Version : {{version}}</div>
+        <div style="text-align: left;bottom: 10px;float:bottom">Date : {{date}}</div>
     </span>
+
 </div>
