prestations selon mcd et bidirectionnel avec collaborateur et liste filtrée

--- a/src/app/component/prestations/prestations.component.css
+++ b/src/app/component/prestations/prestations.component.css
@@ -4,6 +4,11 @@ th {
     font-size : 0.9em;
 }
 
+th input {
+    width: 100%;
+}
+
+
 .tablecol {
     border-collapse: collapse;
     border: 1px solid  #0C0213;
