--- a/src/app/component/prestations/prestations.component.html
+++ b/src/app/component/prestations/prestations.component.html
@@ -21,7 +21,7 @@
     <ng-template pTemplate="header" let-columns>
         <tr>
             <th *ngFor="let col of cols">{{col.header}}</th>
-            <th class="tablecolbody" style="border-top:none; background-color:#f5f5f5"></th>
+            <th style="border-top:none; background-color:#f5f5f5; width:120px"></th>
         </tr>
 
         <tr>
@@ -29,6 +29,7 @@
                 <input *ngSwitchCase="'prestIdPilote'" pInputText type="text" (input)="pt.filter($event.target.value, col.field, col.filterMatchMode)">
                 <input *ngSwitchCase="'prestDateDebut'" pInputText type="text" (input)="pt.filter($event.target.value, col.field, col.filterMatchMode)">
                 <input *ngSwitchCase="'prestDateFin'" pInputText type="text" (input)="pt.filter($event.target.value, col.field, col.filterMatchMode)">
+                <input *ngSwitchCase="'prestContrat'" pInputText type="text" (input)="pt.filter($event.target.value, col.field, col.filterMatchMode)">
                 <input *ngSwitchCase="'prestATG'" pInputText type="text" (input)="pt.filter($event.target.value, col.field, col.filterMatchMode)">
                 <input *ngSwitchCase="'prestDepartement'" pInputText type="text" (input)="pt.filter($event.target.value, col.field, col.filterMatchMode)">
                 <input *ngSwitchCase="'prestPole'" pInputText type="text" (input)="pt.filter($event.target.value, col.field, col.filterMatchMode)">
