--- a/src/app/administrator/administrator.component.html
+++ b/src/app/administrator/administrator.component.html
@@ -74,7 +74,7 @@
 
 
         <p-accordion [multiple]="true" *ngFor="let item of all_sheet_name; let i = index"  >
-            <p-accordionTab header="Godfather I">
+            <p-accordionTab header="">
                 <p-header class="" style="">
 
                     <div class="ui-toolbar-group-left" style="position:absolute;top:5%;left: 40px"><a>{{all_sheet_name[i]}}</a></div>
