prestations pour Isabelle

--- a/src/app/component/prestations/prestations.component.css
+++ b/src/app/component/prestations/prestations.component.css
@@ -1,13 +1,8 @@
 button {margin: 3px}
 
-th {
-    font-size : 0.9em;
-}
+th {    font-size : 0.9em;}
 
-th input {
-    width: 100%;
-}
-
+th input {    width: 100%;}
 
 .tablecol {
     border-collapse: collapse;
@@ -15,4 +10,22 @@ th input {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.link {
+    display:inline-block;
+    padding-left:3px;
+    height: 100%;
+    width:100%;
+}
+
+.link div {
+    height: 100%;
+    width:100%;
+
+}
+
+.link :hover {
+    background-color : rgba(150,200,200,0.5);
+    color : white;
 }
