--- a/src/app/component/prestations/prestations.component.html
+++ b/src/app/component/prestations/prestations.component.html
@@ -1,7 +1,7 @@
 
 <p-toolbar>
        <div class="ui-toolbar-group-right">
-        <button pButton type="button" label="New" icon="pi pi-plus"></button>
+        <button pButton type="button" label="Nouvelle prestation" icon="pi pi-plus"></button>
         <!--<button pButton type="button" label="Upload" icon="pi pi-upload" class="ui-button-success"></button>-->
         <!--<i class="pi pi-bars"></i>-->
         </div>
@@ -15,7 +15,7 @@
     <ng-template pTemplate="caption">
         <div class="ui-toolbar-group-left">PRESTATIONS {{employee_name}}</div>
         <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
-        <input type="text" pInputText size="50" placeholder="Global Filter" (input)="pt.filterGlobal($event.target.value, 'contains')" style="width:auto">
+        <input type="text" pInputText size="50" placeholder="Rechercher dans la liste" (input)="pt.filterGlobal($event.target.value, 'contains')" style="width:auto">
     </ng-template>
 
     <ng-template pTemplate="header" let-columns>
@@ -50,7 +50,7 @@
 
             <!-- DataRows -->
             <td *ngFor="let col of columns" class="tablecol" [ngSwitch]="col.field">
-                <a *ngSwitchCase="'prestIdPilote'" routerLink="/prestations/collab/{{rowData['collaborateur'].id}}">{{rowData['collaborateur'].trigOpen}}</a>
+                <a class="link" *ngSwitchCase="'prestIdPilote'" routerLink="/prestations/collab/{{rowData['collaborateur'].id}}"><div>{{rowData['collaborateur'].trigOpen}}</div></a>
                 <span *ngSwitchDefault>{{rowData[col.field]}}</span>
             </td>
 
