--- a/src/app/component/prestations/prestations.component.html
+++ b/src/app/component/prestations/prestations.component.html
@@ -1,7 +1,7 @@
 
 <p-toolbar>
        <div class="ui-toolbar-group-right">
-        <button pButton type="button" label="New" icon="pi pi-plus"></button>
+        <button pButton type="button" label="Nouvelle prestation" icon="pi pi-plus"></button>
         <!--<button pButton type="button" label="Upload" icon="pi pi-upload" class="ui-button-success"></button>-->
         <!--<i class="pi pi-bars"></i>-->
         </div>
@@ -10,18 +10,24 @@
    <p></p>
 </div>
 
-<p-table #pt [columns]="cols" [value]="prestations" [paginator]="true" [rows]="10">
+<p-table #pt [columns]="selectedColumns" [value]="prestations" [paginator]="true" [rows]="10">
 
     <ng-template pTemplate="caption">
         <div class="ui-toolbar-group-left">PRESTATIONS {{employee_name}}</div>
         <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
-        <input type="text" pInputText size="50" placeholder="Global Filter" (input)="pt.filterGlobal($event.target.value, 'contains')" style="width:auto">
+        <input type="text" pInputText size="50" placeholder="Chercher dans la liste" (input)="pt.filterGlobal($event.target.value, 'contains')" style="width:auto">
+
+        <div class="ui-toolbar-group-right">
+            <p-multiSelect [options]="cols" [showToggleAll]="" [(ngModel)]="selectedColumns" optionLabel="header"
+                           selectedItemsLabel="{0} colonnes sélectionnées" [style]="{minWidth: '200px'}"
+                           defaultLabel="Choix des colonnes"></p-multiSelect>
+        </div>
     </ng-template>
 
     <ng-template pTemplate="header" let-columns>
         <tr>
-            <th *ngFor="let col of cols">{{col.header}}</th>
-            <th style="border-top:none; background-color:#f5f5f5; width:120px"></th>
+            <th *ngFor="let col of columns">{{col.header}}</th>
+            <th style="border-top:none; background-color:#f5f5f5; width:140px"></th>
         </tr>
 
         <tr>
@@ -37,9 +43,10 @@
                 <input *ngSwitchCase="'prestSite'" pInputText type="text" (input)="pt.filter($event.target.value, col.field, col.filterMatchMode)">
                 <input *ngSwitchCase="'prestPU'" pInputText type="text" (input)="pt.filter($event.target.value, col.field, col.filterMatchMode)">
                 <input *ngSwitchCase="'prestType'" pInputText type="text" (input)="pt.filter($event.target.value, col.field, col.filterMatchMode)">
-                <p-dropdown *ngSwitchCase="'prestVersion'" [options]="versions" [(ngModel)]="selectedPrestas.version" [style]="{'width':'auto', 'min-width':'auto'}" [showClear]="true" (onChange)="pt.filter($event.value, 'prestVersionActuelle', 'equals')"></p-dropdown>
+                <p-dropdown *ngSwitchCase="'prestStatut'" [options]="status" [(ngModel)]="selectedPrestas.statut" [style]="{'width':'auto', 'min-width':'auto'}" (onChange)="filterVersions()"></p-dropdown>
+                <div *ngSwitchCase="'prestVersion'"><p-dropdown *ngIf="showHistSelect" [options]="versions" [(ngModel)]="selectedPrestas.version" [style]="{'width':'auto', 'min-width':'auto'}" (onChange)="filterVersions()"></p-dropdown></div>
+
                 <!--input *ngSwitchCase="'prestVersion'" pInputText type="text" (input)="pt.filter($event.target.value, col.field, col.filterMatchMode)"-->
-                <p-dropdown *ngSwitchCase="'prestStatut'" [options]="status" [(ngModel)]="selectedPrestas.statut" [style]="{'width':'auto', 'min-width':'auto'}" [showClear]="true" (onChange)="pt.filter($event.value, col.field, 'equals')"></p-dropdown>
             </th>
         </tr>
     </ng-template>
